Temp - hold off for trees that grow

--- a/cat-herder.cabal
+++ b/cat-herder.cabal
@@ -249,7 +249,10 @@ library
   exposed-modules:
     Cat
 
+
     Cat.Operators
+    Cat.GraphViz
+
     Cat.Orthotope
     Cat.Orthotope.Extras
     Cat.VectorSized
@@ -454,3 +457,5 @@ library
     -- -- , algebra
     -- -- , semirings
     -- -- , semiring-num
+
+    , language-dot
